tests/miniJava/neg/004387_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public return int [] java ( ) { return 0 ; } }
